clarify image sizes, fix whitespace

--- a/app/assets/stylesheets/forever_style_guide/modules/_hero.scss
+++ b/app/assets/stylesheets/forever_style_guide/modules/_hero.scss
@@ -1,7 +1,11 @@
 $hero-no_overlap-height-xxl: 450px;
 $hero-no_overlap-block-padding: 30px;
-$hero-img-height: 484px;
-$hero-img-width: 1400px;
+$hero-img-width: 480px;
+$hero-img-height: 240px;
+$hero-img-width-xs: 768px;
+$hero-img-height-xs: 266px;
+$hero-img-width-sm: 1400px;
+$hero-img-height-sm: 484px;
 
 // TODO: confirm that we can remove everything below this (except the no_overlap bit!)
 //       and pull in hero_simple styles
@@ -69,12 +73,15 @@ TODO: use picture element + picturefill to avoid css hacks
 .hero-no_overlap {
   width: 100%;
   height: 0; 
-  padding-top: 50%; /* (240 / 480 * 100) image size: 480px x 240px */
+  padding-top: percentage($hero-img-height / $hero-img-width);
   background-size: cover;
   background-repeat: no-repeat;
 
   @media (min-width: $screen-xs) {
-    padding-top: percentage($hero-img-height / $hero-img-width); /* image sizes: 768px x 266px (xs) and 1400px x 484px (sm) */
+    padding-top: percentage($hero-img-height-xs / $hero-img-width-xs);
+  }
+  @media (min-width: $screen-sm) {
+    padding-top: percentage($hero-img-height-sm / $hero-img-width-sm);
   }
   @media (min-width: $screen-xl) {
     height: $hero-no_overlap-height-xxl;
